--- a/prototype/website/src/game-app/ui/death-dialog.html
+++ b/prototype/website/src/game-app/ui/death-dialog.html
@@ -17,14 +17,8 @@
             }
 
             #dialog {
-                pointer-events: auto;
-                position: absolute;
-                left: 50%;
-                top: 50%;
-                transform: translate(-50%, -50%);
                 min-width: 428px;
                 max-width: 428px;
-                z-index: 999;
             }
 
             span {
@@ -45,43 +39,13 @@
                 font-size: small;
                 color: var(--paper-grey-300);
             }
-
-            @keyframes fadein {
-                from {
-                    opacity: 0;
-                }
-                to {
-                    opacity: 0.64;
-                }
-            }
-
-            #container {
-                top: 0;
-                left: 0;
-                right: 0;
-                bottom: 0;
-                position: absolute;
-                display: none;
-                pointer-events: all;
-                z-index: 500;
-            }
-
-            .overlay {
-                width: 100%;
-                height: 100%;
-                z-index: 400;
-                background-color: black;
-                opacity: 0.64;
-                animation: fadein 1.2s ease 1;
-                pointer-events: none;
-            }
         </style>
 
         <iron-ajax auto url="src/data/death_notes.json" handle-as="json" last-response="{{quotes}}"></iron-ajax>
 
-        <div id="container">
-            <div class="overlay"></div>
-            <paper-material elevation="3" class="interface-box" id="dialog">
+        <div class="dialog-container" id="container">
+            <div class="dialog-overlay"></div>
+            <paper-material elevation="3" class="interface-box dialog-center" id="dialog">
                 <span class="dialog-header">[[_parse(quote.title)]]</span>
                 <span class="dialog-text">[[_parse(quote.text)]]</span>
 
