--- a/prototype/website/src/game-app/ui/death-dialog.html
+++ b/prototype/website/src/game-app/ui/death-dialog.html
@@ -45,7 +45,7 @@
 
         <div class="dialog-container" id="container">
             <div class="dialog-overlay"></div>
-            <paper-material elevation="3" class="interface-box dialog-center" id="dialog">
+            <paper-material elevation="3" class="interface-box noselect dialog-center" id="dialog">
                 <span class="dialog-header">[[_parse(quote.title)]]</span>
                 <span class="dialog-text">[[_parse(quote.text)]]</span>
 
