--- a/prototype/website/src/game-app/ui/loot-dialog.html
+++ b/prototype/website/src/game-app/ui/loot-dialog.html
@@ -21,6 +21,7 @@
             #dialog {
                 max-width: 428px;
                 min-height: 112px;
+                min-width: 428px;
             }
 
             span {
