--- a/prototype/website/index.html
+++ b/prototype/website/index.html
@@ -7,6 +7,7 @@
     <link rel="manifest" href="manifest.json">
     <!--<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>-->
     <meta name="viewport" content="initial-scale=1, maximum-scale=1,target-densitydpi=device-dpi, user-scalable=no">
+    <script src="src/script/eventbus.js"></script>
     <script src="src/script/network.js"></script>
     <script src="src/script/connection.js"></script>
     <script src="src/script/application.js"></script>
