--- a/prototype/website/src/game-app/ui/player-inventory.html
+++ b/prototype/website/src/game-app/ui/player-inventory.html
@@ -45,7 +45,9 @@
                 flex-wrap: wrap;
                 justify-content: left;
                 min-height: 48px;
-                padding: 8px 22px;
+                padding-bottom: 16px;
+                padding-left: 8px;
+                padding-right: 8px;
             }
 
             .slot_row {
