minor css fixes + only send vector stop event if actually moving on death.

--- a/prototype/website/src/game-app/game-view.html
+++ b/prototype/website/src/game-app/game-view.html
@@ -175,7 +175,7 @@
                                     application.error('Bootstrap script not downloaded: "' + script + '".');
                                 }
                             } else {
-                                event.status('Starting game..');
+                                event.status('Joining server..');
 
                                 application.scriptsLoaded();
                                 window.game.onScriptsLoaded({
