--- a/prototype/website/src/game-app/character-create.html
+++ b/prototype/website/src/game-app/character-create.html
@@ -56,7 +56,7 @@
                 position: absolute;
                 top: 46px;
                 margin-left: 146px;
-                width: 55%;
+                margin-right: 24px;
             }
 
             .class-image {
@@ -156,7 +156,7 @@
 
             .create-box {
                 max-width: 625px;
-                padding-bottom:32px;
+                padding-bottom: 32px;
             }
 
             @media (max-width: 728px) {
@@ -254,7 +254,8 @@
                                     <paper-tooltip animation-delay="0" position="left">
                                         <div class="class-stats">
                                             Stats
-                                            <stats-view compact="true" selected="{{_classInfo(classes, playerclass.id, realm.*)}}">
+                                            <stats-view compact="true"
+                                                        selected="{{_classInfo(classes, playerclass.id, realm.*)}}">
                                             </stats-view>
                                         </div>
                                     </paper-tooltip>
@@ -271,7 +272,9 @@
 
                                             <paper-tooltip animation-delay="0" class="tooltip">
                                                 <div class="spell-name">[[_getSpellName(spell)]]</div>
-                                                <div class="spell-description">{{_getSpellDescription(spell, playerclass.stats)}}</div>
+                                                <div class="spell-description">{{_getSpellDescription(spell,
+                                                    playerclass.stats)}}
+                                                </div>
                                             </paper-tooltip>
                                         </div>
                                     </template>
@@ -371,7 +374,7 @@
         _getSpellDescription(spellId, stats) {
             let spell = this.spells[spellId];
             if (spell) {
-                this.character = { stats: stats };
+                this.character = {stats: stats};
                 return eval('`' + this.spells[spellId].description + '`');
             } else {
                 return "No description, possible overpowered.";
