--- a/prototype/website/src/game-app/ui/player-status.html
+++ b/prototype/website/src/game-app/ui/player-status.html
@@ -38,9 +38,8 @@
                 display: block;
                 position: absolute;
                 left: 66px;
-                opacity: 0.7;
+                opacity: 0.86;
                 top: 12px;
-                font: 16px 'LeagueGothicRegular';
             }
 
             .health-bar {
@@ -371,22 +370,24 @@
             }
 
             _notifyTargetChange(target) {
-                if (target && target.afflictions) {
+                if (target) {
                     this._updatePlayerState(target);
                 }
             }
 
             _updatePlayerState(target) {
                 this._default(target, 'experience');
-                this._default(target, 'nextlevel', 100);
+                this._default(target, 'nextlevel');
                 this._default(target, 'energy');
 
                 this.target = target;
 
-                this.afflictions = [];
-                this.afflictions = target.afflictions;
+                if (target.afflictions) {
+                    this.afflictions = [];
+                    this.afflictions = target.afflictions;
+                    this.notifyPath("afflictions");
+                }
 
-                this.notifyPath("afflictions");
                 this.notifyPath("target.classId");
                 this.shadowRoot.querySelector('#stats').update(target);
             }
@@ -397,6 +398,16 @@
             }
 
             _default(target, attribute, def) {
+                if (!target.stats) {
+                    target.stats = {
+                        health: 0,
+                        maxhealth: 1,
+                        energy: 0,
+                        maxenergy: 1,
+                        experience: 0,
+                        nextlevel: 1
+                    };
+                }
                 if (!target.stats[attribute]) {
                     target.stats[attribute] = (def) ? def : 0;
                 }
