--- a/prototype/website/src/style/theme.html
+++ b/prototype/website/src/style/theme.html
@@ -8,7 +8,7 @@
  * Compatible with Polymer 1.0
  */
 
-@import url("https://fonts.googleapis.com/css?family=Open+Sans|Oswald:700");
+/*@import url("https://fonts.googleapis.com/css?family=Open+Sans|Oswald:700");*/
 html { -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; font-size: 16px; }
 
 html, body { margin: 0px; padding: 0px; min-height: 100%; color: #ffffff; background-color: #212121; font-family: 'Open Sans', sans-serif; font-weight: 400; }
