started on party implementation.

--- a/prototype/website/src/game-app/game-view.html
+++ b/prototype/website/src/game-app/game-view.html
@@ -12,6 +12,7 @@
 <link rel="import" href="./ui/notification-toaster.html">
 <link rel="import" href="./ui/quest-log.html">
 <link rel="import" href="./ui/party-view.html">
+<link rel="import" href="./ui/friend-view.html">
 
 <!--
     @author Robin Duda
@@ -63,6 +64,7 @@
                 <loot-dialog></loot-dialog>
                 <death-dialog></death-dialog>
                 <player-inventory></player-inventory>
+                <friend-view></friend-view>
 
 
                 <!-- target -->
